[package]
name = "service-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22.1"
serde = { version = "1.0.132", features = ["derive"] }
toml = "0.5.8"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
tui = { version = "0.16.0", features = ["crossterm"] }
